@@ -4,10 +4,12 @@ import com.tierraburritoservidor.domain.model.EstadoPedido;
 import com.tierraburritoservidor.domain.model.Ingredientes;
 import com.tierraburritoservidor.domain.model.Pedido;
 import com.tierraburritoservidor.domain.model.Plato;
+import com.tierraburritoservidor.errors.exceptions.PedidoNoEncontradoException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Repository
@@ -15,15 +17,15 @@ import java.util.List;
 public class RepositoryPedidos {
 
 
-    private List<Pedido> pedidos = List.of(
-            new Pedido(1, 1, "Calle falsa 123", "pepe@correo.es", List.of(
+    private List<Pedido> pedidos = new ArrayList<>(Arrays.asList(
+            new Pedido(1, "Calle falsa 123", "pepe@correo.es", List.of(
                     new Plato(4, "Desnudo", List.of(
                             Ingredientes.CARNITAS, Ingredientes.ARROZ_BLANCO, Ingredientes.MAIZ, Ingredientes.PICO_DE_GALLO, Ingredientes.VERDURAS, Ingredientes.GUACAMOLE
                     ), List.of(), 10.99, "https://www.tierraburritos.com/wp-content/uploads/Desnudo_1-2.jpg"),
                     new Plato(3, "Tacos", List.of(
                             Ingredientes.CARNITAS, Ingredientes.VERDURAS, Ingredientes.QUESO_RALLADO, Ingredientes.PICO_DE_GALLO, Ingredientes.GUACAMOLE, Ingredientes.SALSA_DE_QUESO
                     ), List.of(), 8.99, "https://www.tierraburritos.com/wp-content/uploads/10_Tacos-1.jpg")
-            ), List.of(), 19.98, EstadoPedido.CLIENTE_ELIGIENDO));
+            ), List.of(), 19.98, EstadoPedido.ENTREGADO)));
 
 
     public List<Pedido> getPedidos() {
@@ -40,6 +42,7 @@ public class RepositoryPedidos {
                 repetido = false;
             }
         }
+        pedido.setEstado(EstadoPedido.EN_PREPARACION);
         pedido.setId(id);
         pedidos.add(pedido);
         return pedido;
@@ -47,11 +50,13 @@ public class RepositoryPedidos {
 
     public void updateEstadoPedido(Pedido pedido) {
         Pedido pedidoUpdate = pedidos.stream()
-                .filter(u -> u.getId() == pedido.getId())
+                .filter(p -> p.getId() == pedido.getId())
                 .findFirst()
                 .orElse(null);
         if (pedidoUpdate != null) {
             pedidoUpdate.setEstado(pedido.getEstado());
+        } else {
+            throw new PedidoNoEncontradoException();
         }
     }
 
@@ -59,11 +64,6 @@ public class RepositoryPedidos {
         pedidos.removeIf(p -> p.getId() == id);
     }
 
-    public List<Pedido> getPedidosByUsuario(int idUsuario) {
-        return pedidos.stream()
-                .filter(p -> p.getIdCliente() == idUsuario)
-                .toList();
-    }
 
     public Pedido getPedidoById(int id) {
         return pedidos.stream()
@@ -82,7 +82,6 @@ public class RepositoryPedidos {
 
     public void updatePedido(Pedido pedido) {
         Pedido pedidoUpdate = getPedidoById(pedido.getId());
-        pedidoUpdate.setIdCliente(pedido.getIdCliente());
         pedidoUpdate.setDireccion(pedido.getDireccion());
         pedidoUpdate.setCorreoCliente(pedido.getCorreoCliente());
         pedidoUpdate.setOtros(pedido.getOtros());
